# api/models/patch.go
@@ -1,0 +1,6 @@
+package models
+
+type PatchRequest struct {
+	ID string `json:"id"`
+	Fields map[string]interface{}
+}
